tests/incremental_haste_phantom/incremental_haste_phantom.exp

Initial status:
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:3:1
   3| foo as empty;
      ^^^

References:
   node_modules/foo.js:2:18
   2| module.exports = 0;
                       ^ [1]
   test.js:3:8
   3| foo as empty;
             ^^^^^ [2]



Found 1 error

Introduce haste module "foo"
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test.js:3:1
   3| foo as empty;
      ^^^

References:
   foo.js:2:18
   2| module.exports = "";
                       ^^ [1]
   test.js:3:8
   3| foo as empty;
             ^^^^^ [2]



Found 1 error

Remove haste module "foo"
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:3:1
   3| foo as empty;
      ^^^

References:
   node_modules/foo.js:2:18
   2| module.exports = 0;
                       ^ [1]
   test.js:3:8
   3| foo as empty;
             ^^^^^ [2]



Found 1 error

Done!
